--- a/inst/resources/css/izertis_template.css
+++ b/inst/resources/css/izertis_template.css
@@ -177,7 +177,7 @@ h2 {
 h3 {
   margin: 0.75em 0;
   font-size: 0.9em;
-  color: ##363D58;
+  color: #363D58;
 
 
 }
@@ -310,7 +310,7 @@ table {
 
 th, td {
 
-  border-bottom: 1px solid #434040);
+  border-bottom: 1px solid #434040;
   text-align: left;
   padding: 10px;
 }
@@ -324,12 +324,12 @@ th {
 tr:nth-child(odd) {
 
   background-color: #363D58;
-  background-color: var(--maincolor2);
   color: white;
 }
 
 tr:nth-child(even) {
   background-color: #ffffff;
+  color: black;
 }
 
 /* LAYOUT STYLES */
@@ -338,7 +338,7 @@ body {
   font-size: 16px;
   font-weight: 400;
   line-height: 1.5;
-  color: $secondarycolor1;
+  color: #363D58;
 
 }
 
@@ -364,35 +364,8 @@ header {
   text-align: center;
 }
 
-header h1 {
-  margin-top: 0;
-  margin-bottom: 0.5em;
-  font-size: 1.2em;
-  font-weight: bold;
-  line-height: 1;
-  color: #fff;
-  letter-spacing: -1px;
-}
 
-header h2 {
-  margin-top: 0;
-  margin-bottom: 1em;
-  font-size: 1em;
-  font-weight: normal;
-  line-height: 1.3;
-  color: #9ddcff;
-  letter-spacing: 0;
-}
 
-header h3 {
-  margin-top: 0;
-  margin-bottom: 1em;
-  font-size: 0.8 em;
-  font-weight: normal;
-  line-height: 1.2;
-  color: #9ddcff;
-  letter-spacing: 0;
-}
 
 .inner, .toc {
   position: relative;
@@ -428,25 +401,19 @@ code, pre {
   color: #222;
 }
 
-code {
-  padding: 0 3px;
-  background-color: #f2f8fc;
-  border: solid 1px #dbe7f3;
-}
 
 pre {
   padding: 20px;
   overflow: auto;
   text-shadow: none;
-  background: #fff;
-  border: solid 1px #f2f2f2;
+  background: #d0d3e2;
+  border: solid 1px #363D58;
   font-size: 0.9em;
 }
 pre code {
   padding: 0;
-  color: #2879d0;
-  background-color: #fff;
-  border: none;
+  background-color: #d0d3e2;
+  border: none ;
 }
 
 ul, ol, dl {
